--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,9 @@
-{
-  "compilerOptions": {
-    "baseUrl": ".",
-    "paths": {
-      "@/components/*": [
-        "src/components/*"
-      ]
+    // tsconfig.json or jsconfig.json
+    {
+      "compilerOptions": {
+        "baseUrl": ".",
+        "paths": {
+          "@/*": ["./*"]
+        }
+      }
     }
-  }
-}
