--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
+    "version": 2,
     "builds": [
       {
+        "use": "@vercel/static",
         "config": {
           "buildOptions": {
             "jsconfig": "jsconfig.json"
